<resources>
    <string name="app_name">findmypet-android-ui</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_aboutus">About us</string>
    <string name="report_lost_pet">Report lost pet</string>
    <string name="about_us">About us</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_view">Map view</string>
    <string name="list_view">List view</string>
    <string name="pet_name">Pet name</string>
    <string name="colour">Colour</string>
    <string name="title">Poster title</string>
    <string name="date_last_seen">Date last seen</string>
    <string name="description_text">Anything else that might help others find your pet</string>
    <string name="location_last_seen">Where was your pet was last seen?</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_number">Contact number</string>
    <string name="contact_email_address">Contact email address</string>
    <string name="contact_details">How can others get in contact with you?</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="view_on_map">View on map</string>

    <string name="filter_posters">Filter posters</string>

    <string-array name="filter_items">
        <item>All</item>
        <item>Colour</item>
        <item>Type</item>
    </string-array>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>