<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="poster"
            type="com.example.findmypet_android_ui.model.Poster" />
        <variable
            name="pet"
            type="com.example.findmypet_android_ui.model.Pet" />
        <variable
            name="owner"
            type="com.example.findmypet_android_ui.model.Owner" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addposter.AddPosterFragment">

        <com.example.findmypet_android_ui.ui.util.CustomScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/pet_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/title"
                    android:text="@={poster.title}"
                    android:textSize="18sp"
                    android:background="@drawable/edit_text_styling"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:id="@+id/pet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/pet_name"
                    android:text="@={pet.name}"
                    android:textSize="18sp"
                    android:background="@drawable/edit_text_styling"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pet_title"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:id="@+id/date_last_seen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/edit_text_styling"
                    android:hint="@string/date_last_seen"
                    android:text="@={pet.LostDate}"
                    android:inputType="date"
                    android:textSize="18sp" />
                <!--            need to implement date picker dialog in the add poster fragment-->

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginEnd="15dp"
                    android:textSize="18sp"
                    android:text="@string/location_last_seen"/>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>
                <EditText
                    android:id="@+id/pet_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:hint="Pet type"
                    android:background="@drawable/edit_text_styling"
                    android:text="@={pet.type}"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/pet_colour"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/colour"
                        android:background="@drawable/edit_text_styling"
                        android:text="@={pet.colour}"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp" />

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/age"
                        android:text="@={pet.age}"
                        android:background="@drawable/edit_text_styling"
                        android:textSize="18sp"
                        android:inputType="number"
                        android:layout_marginTop="15dp" />


                </LinearLayout>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/description_text"
                    android:text="@={poster.description}"
                    android:background="@drawable/edit_text_styling"
                    android:textSize="18sp"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/contact_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:textSize="18sp"
                    android:text="@string/contact_details"/>

                <EditText
                    android:id="@+id/contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/contact_name"
                    android:background="@drawable/edit_text_styling"
                    android:text="@={owner.name}"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/contact_number"
                    android:background="@drawable/edit_text_styling"
                    android:text="@={owner.contactNumber}"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/contact_email_address"
                    android:background="@drawable/edit_text_styling"
                    android:text="@={owner.emailAddress}"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_style"/>

            </LinearLayout>
        </com.example.findmypet_android_ui.ui.util.CustomScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>